[workspace]
members = [
    "spatialrs-core",
    "spatialrs-io",
    "spatialrs-cli",
]
resolver = "2"

[workspace.dependencies]
anyhow      = "1.0"
serde       = { version = "1.0", features = ["derive"] }
rayon       = "1.11"
ndarray     = "0.17"
rstar       = "0.12"
csv         = "1.4"
thiserror   = "2.0"
clap        = { version = "4.5", features = ["derive"] }
hdf5-metno  = { version = "0.12", features = ["blosc"] }
